--- a/_header.html
+++ b/_header.html
@@ -3,3 +3,14 @@
     <img src="images/strat-logo.png" alt="BYU Strategy - Marriott School of Business" />
   </a>
 </header>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LL8HYJBDBP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LL8HYJBDBP');
+</script>
